--- a/mybatis/.classpath
+++ b/mybatis/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="config"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="lib/ant-1.9.6.jar"/>
@@ -16,7 +17,7 @@
 	<classpathentry kind="lib" path="lib/ognl-3.1.14.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.25.jar"/>
-	<classpathentry kind="lib" path="lib/mybatis-3.4.4.jar" sourcepath="E:/Materials/video/mybatis/jar包/mybatis-3-mybatis-3.4.4.zip"/>
+	<classpathentry kind="lib" path="lib/mybatis-3.4.4.jar" sourcepath="D:/Materials/Videos/mybatis/jar包/mybatis-3-mybatis-3.4.4.zip"/>
 	<classpathentry kind="lib" path="lib/junit-4.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
