--- a/spring_mybatis/.classpath
+++ b/spring_mybatis/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_144"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_144"/>
 	<classpathentry kind="lib" path="lib/ant-1.9.6.jar"/>
 	<classpathentry kind="lib" path="lib/ant-launcher-1.9.6.jar"/>
 	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
