--- a/springmvcfirst/WebRoot/WEB-INF/web.xml
+++ b/springmvcfirst/WebRoot/WEB-INF/web.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>springmvcfirst</display-name>
+  
+  <!-- 配置springmvc前端控制器 -->
+  <servlet>
+  	<servlet-name>springmvc</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<!-- 
+  	contextConfigLocation配置springmvc加载的配置文件（配置处理器映射器，处理器适配器等等）
+  	如果不配置contextConfigLocation，默认加载的是/WEB_INF/servlet名称-servlet.xml(springmvc-servlet.xml)
+  	 -->
+  	<init-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>classpath:springmvc.xml</param-value>
+  	</init-param>
+  </servlet>
+  
+  <servlet-mapping>
+  	<!-- 上面定义的springmvc -->
+  	<servlet-name>springmvc</servlet-name>
+  	<!-- 
+  	第一种：*.action，访问以.action结尾由DispatcherServlet进行解析
+  	第二种：/，所有访问地址都有DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析，使用此种方式可以实现RESTful风格的url
+  	第三种：/*，这样配置不对，使用这种配置，最终要转发到一个jsp页面时，仍然会由DispatcherServlet解析jsp，不能根据jsp页面找到handler，会报错
+  	 -->
+  	<url-pattern>*.action</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,4 +35,4 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-</web-app>
+</web-app> 	
